# clinical-question-evidence-studio

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: Home.py
app/components/: __init__.py  ui_helpers.py
app/pages/: 2_Question_Builder.py  3_Phenotype_Builder.py  4_Synthetic_Cohort.py  5_External_Evidence.py  6_Evidence_Brief.py  7_Export_Center.py
data/fixtures/: catalog.json
docs/: architecture.md  brief_qa_framework.md  cohort_methodology.md  data_dictionary.md  deployment.md  evidence_brief_generation.md  evidence_provenance.md  evidence_ranking.md  evidence_retrieval_methodology.md  human_review_workflow.md  llm_governance.md  phase3_verification_report.md  phase4_verification_report.md  phase5_verification_report.md  phase6_verification_report.md  phenotype_methodology.md  portfolio_case_study.md  qa_framework.md  security_review.md  source_adapter_contract.md  synthetic_data_methodology.md
scripts/: generate_fixtures.py  generate_synthetic_fhir.py  run_end_to_end_demo.py
src/: __init__.py
src/api/: main.py
src/cache/: evidence_cache.py
src/cohorts/: __init__.py  engine.py  rules.py  service.py
src/config/: settings.py
src/evidence/: deduplication.py  metatagging.py  normalizer.py  query_builder.py  ranking.py  repository.py  service.py
src/evidence_sources/: __init__.py  base.py  clinical_trials.py  cms_coverage.py  pubmed.py  registry.py  rxnorm.py  service.py
src/exports/: __init__.py  checksums.py  filename.py  manifest.py  pdf_export.py  pptx_export.py  repository.py  service.py  zip_bundle.py
src/fhir/: __init__.py  loader.py  normalizer.py  parser.py  service.py
src/llm/: __init__.py  client.py
src/metatagging/: __init__.py
src/phenotypes/: __init__.py  repository.py  service.py
src/qa/: __init__.py  brief_checks.py  cohort_checks.py  evidence_checks.py  fhir_checks.py  retrieval_checks.py
src/question_parser/: __init__.py  demo_parser.py  parser.py  service.py
src/review/: __init__.py  audit.py  brief_review_service.py
src/schemas/: __init__.py  brief.py  cohort.py  evidence.py  exports.py  fhir.py  parsing.py  phenotype.py  qa.py  question.py  retrieval.py  synthesis.py  terminology_verification.py
src/synthesis/: __init__.py  brief_service.py  citation_resolver.py  deterministic_generator.py  evidence_snapshot.py  limitations.py  llm_generator.py  markdown_export.py  repository.py
src/terminology/: __init__.py  mapper.py  repository.py  service.py
src/utils/: exceptions.py
tests/: conftest.py
(+67 files in other folders)
