[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinical-question-evidence-studio"
version = "0.1.0"
description = "Clinical informatics portfolio prototype: NL question → PICO → computable phenotype → synthetic cohort → evidence brief"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Johanna Momole", email = "johannafiola25@gmail.com" },
]
keywords = [
  "clinical-informatics",
  "real-world-evidence",
  "FHIR",
  "phenotyping",
  "evidence-synthesis",
  "healthcare-analytics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
  "streamlit>=1.32.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "duckdb>=0.10.0",
  "pandas>=2.2.0",
  "polars>=0.20.0",
  "plotly>=5.20.0",
  "httpx>=0.27.0",
  "requests>=2.31.0",
  "tenacity>=8.2.0",
  "diskcache>=5.6.0",
  "python-dotenv>=1.0.0",
  "python-pptx>=0.6.23",
  "reportlab>=4.1.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
llm = [
  "anthropic>=0.25.0",
  "openai>=1.14.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "types-requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line length handled by formatter
  "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"scripts/**" = ["T201", "E402"]
"app/**" = ["T201", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
